@@ -1,3 +1,4 @@
 2014-12-02 v0.9
-+ Added Changes
-+ Added MINOR_PERL_VERSION
++ Added Changes file
++ Added MINOR_PERL_VERSION in Makefile.PL
++ Updated Artistic license url
